<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.video.videomusic.MainActivity">

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/CameraView"/>
    <TextView
        android:id="@+id/countdown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#FFF"
        android:textSize="100sp"
        android:textStyle="bold"
        android:text="1"
        android:visibility="gone"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/l_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp">
        <ImageButton
            android:id="@+id/music_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sound_btn"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/l_music">
        <TextView
            android:id="@+id/music_selected"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:paddingRight="5dp"
            android:drawableStart="@drawable/ic_music"
            android:drawablePadding="10sp"
            android:text="Selected Music"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:gravity="center">
        <ImageButton
            android:id="@+id/user_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:textColor="#000"
            android:padding="5sp"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/gradient_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:paddingBottom="30sp">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:layout_gravity="center"
       android:gravity="center"
       android:paddingBottom="30sp"
       android:weightSum="2">
      <ImageButton
          android:layout_weight="1"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/effects"
          android:src="@drawable/ic_effect_btn"
          android:background="@null"
          />
       <ImageButton
           android:layout_weight="1"
           android:visibility="gone"
           android:layout_gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_effect_btn"
           android:background="@null"
           />
   </LinearLayout>
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:gravity="center">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:paddingBottom="20sp">
               <FrameLayout
                   android:orientation="vertical"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                  <ImageButton
                      android:layout_gravity="center"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/record_bg"
                      android:src="@drawable/ic_play_button_bg"
                      android:adjustViewBounds="true"
                      android:background="@null"/>
                   <ImageButton
                       android:layout_gravity="center"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/record"
                       android:src="@drawable/ic_play_btn"
                       android:adjustViewBounds="true"
                       android:background="@null"/>
               </FrameLayout>
           </LinearLayout>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_gravity="center"
               android:gravity="center">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:weightSum="3"
                   android:layout_margin="2sp">
                   <TextView
                       android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/thirty_duration"
                       android:adjustViewBounds="true"
                       android:text="@string/_30_secs"
                       android:background="@null"
                       android:textSize="12sp"
                       android:textColor="#fff"
                       android:textStyle="bold"/>
                   <TextView
                       android:layout_marginStart="15sp"
                       android:layout_marginEnd="15sp"
                       android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/separator"
                       android:adjustViewBounds="true"
                       android:text="@string/separator"
                       android:background="@null"
                       android:textStyle="bold"
                       android:textColor="#fff"/>
                   <TextView
                       android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/fifteen_duration"
                       android:adjustViewBounds="true"
                       android:text="@string/_15_secs"
                       android:textSize="12sp"
                       android:textStyle="bold"
                       android:textColor="#fff"
                       android:background="@null"/>
               </LinearLayout>
           </LinearLayout>
       </LinearLayout>
   </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="30sp">

            <ImageButton
                android:id="@+id/flip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_flip_btn" />
        </LinearLayout>

</LinearLayout>

</RelativeLayout>
